--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
-    "eslint:fix": "eslint src --ext js,jsx --fix"
+    "lint": "eslint . --ext ts,js,jsx --report-unused-disable-directives --max-warnings 0",
+    "eslint:fix": "eslint src --ext ts,js,jsx --fix"
   },
   "keywords": [],
   "author": "",
