--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
+    "test": "jest --watchAll --detectOpenHandles",
     "lint": "eslint . --ext ts,js,jsx --report-unused-disable-directives --max-warnings 0",
     "eslint:fix": "eslint src --ext ts,js,jsx --fix"
   },
@@ -22,13 +23,18 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.7",
+    "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "eslint": "^8.52.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-n": "^16.2.0",
     "eslint-plugin-promise": "^6.1.1",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.2"
   }
