--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,6 @@
   },
   "rules": {
     "@typescript-eslint/semi": "off"
-    // "@typescript-eslint/semi": false
-  }
+  },
+  "ignorePatterns": ["dist/*"]
 }
