--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,25 +1,27 @@
 name: ci
 
 on:
- push:
-   branches: ['main']
- pull_request:
-   branches: ['main', 'dev']
- workflow_dispatch:
+  push:
+    branches: ['main']
+  pull_request:
+    branches: ['main', 'develop']
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     steps:
-      name: checkout
-      uses: actions/checkout@v3
-      name: Setup Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-      name: Install dependencies
-      run: npm ci
-      name: Run Linter
-      run: npm run lint
-      name: Run test
-      run: npm run test
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Instalar tar y gzip
+        run: sudo apt-get install tar gzip -y
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+      - name: Install dependencies
+        run: npm ci
+      - name: Run linter
+        run: npm run lint
+      - name: Run tests
+        run: npm run test
