--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches: ['main']
   pull_request:
-    branches: ['main', 'develop']
+    branches: ['main', 'dev']
   workflow_dispatch:
 
 jobs:
@@ -13,7 +13,7 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Instalar tar y gzip
+      - name: Install tar y gzip
         run: sudo apt-get install tar gzip -y
       - name: Setup Node.js
         uses: actions/setup-node@v3
