--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
