--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
-    "test": "jest --ci",
-    "test:watch": "jest --watchAll --detectOpenHandles",
+    "test": "cross-env DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb jest --ci",
+    "test:watch": "cross-env DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb jest --watchAll --detectOpenHandles",
     "lint": "eslint --ext ts,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,js,jsx --fix"
   },
@@ -30,6 +30,7 @@
     "@types/jest": "^29.5.7",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.52.0",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "eslint-plugin-import": "^2.29.0",
