--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -27,6 +28,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
