--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0",
     "morgan": "^1.10.0"
   },
@@ -30,6 +31,7 @@
     "@faker-js/faker": "^8.2.0",
     "@types/bcrypt": "^5.0.2",
     "@types/jest": "^29.5.7",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/supertest": "^2.0.15",
     "@typescript-eslint/eslint-plugin": "^6.9.0",
     "cross-env": "^7.0.3",
