--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,8 @@ NODE_ENV=''
 DB_CONNECTION_STRING=mongodb+srv://user:password@db.84lsprh.mongodb.net/db_name
 DB_CONNECTION_STRING_TEST=mongodb+srv://user:password@db.84lsprh.mongodb.net/testdb_name
 JWT_SECRET="mi-secret"
+CLOUDINARY_CLOUD_NAME=my-projects-cloudinary
+CLOUDINARY_API_KEY=56428973641895
+CLOUDINARY_API_SECRET=Lk5lWiINgdlryPPTHeUmOspaOPDKp9
+CLOUDINARY_PRESET=your-preset
+
