--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn src/app.ts",
     "build": "tsc",
-    "test": "cross-env NODE_ENV=test DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb jest --ci --testMatch '**/*.test.ts'",
-    "test:watch": "cross-env NODE_ENV=test DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb jest --ci --watchAll --detectOpenHandles --testMatch '**/*.test.ts' --runInBand",
+    "test": "cross-env NODE_ENV=test DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb CLOUDINARY_PRESET=ednitha-craft-test-preset jest --ci --testMatch '**/*.test.ts'",
+    "test:watch": "cross-env NODE_ENV=test DB_CONNECTION_STRING=mongodb+srv://cjimenez1392:alcuadrado_18@adogta-db.42szhqj.mongodb.net/ednitha-craft-testdb CLOUDINARY_PRESET=ednitha-craft-test-preset jest --ci --watchAll --detectOpenHandles --testMatch '**/*.test.ts' --runInBand",
     "lint": "eslint --ext ts,js,jsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint src --ext ts,js,jsx --fix"
   },
@@ -20,6 +20,8 @@
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
     "bcrypt": "^5.1.1",
+    "busboy": "^1.6.0",
+    "cloudinary": "^1.41.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -30,6 +32,7 @@
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
     "@types/bcrypt": "^5.0.2",
+    "@types/busboy": "^1.5.3",
     "@types/jest": "^29.5.7",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/supertest": "^2.0.15",
