--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
     "sourceType": "module"
   },
   "rules": {
-    "@typescript-eslint/semi": "off",
+    "@typescript-eslint/semi": ["error", "always"],
     "@typescript-eslint/no-misused-promises": "off"
   },
   "ignorePatterns": ["dist/*"]
