--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,4 +24,9 @@ jobs:
       - name: Run linter
         run: npm run lint
       - name: Run tests
+        env:
+          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME}}
+          CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY}}
+          CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET}}
+          CLOUDINARY_PRESET: ${{ secrets.CLOUDINARY_PRESET}}
         run: npm run test
