--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,14 +23,10 @@ jobs:
         run: npm ci
       - name: Run linter
         run: npm run lint
-      - name: Debug Secrets
-        run:
-          echo "CLOUDINARY_CLOUD_NAME: $CLOUDINARY_CLOUD_NAME"
-          echo "CLOUDINARY_API_KEY: $CLOUDINARY_API_KEY"
-          echo "CLOUDINARY_API_SECRET: $CLOUDINARY_API_SECRET"
       - name: Run tests
         env:
           CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME}}
           CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY}}
           CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET}}
+          CLOUDINARY_PRESET: ${{ secrets.CLOUDINARY_PRESET}}
         run: npm run test
