--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,15 +23,16 @@ jobs:
         run: npm ci
       - name: Run linter
         run: npm run lint
-      - name: Run tests
+      - name: Debug Secrets
         env:
           CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME}}
           CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY}}
           CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET}}
-          CLOUDINARY_PRESET: ${{ secrets.CLOUDINARY_PRESET}}
         run: |
+          echo "Debugging Cloudinary Secrets..."
           echo "CLOUDINARY_CLOUD_NAME: $CLOUDINARY_CLOUD_NAME"
           echo "CLOUDINARY_API_KEY: $CLOUDINARY_API_KEY"
           echo "CLOUDINARY_API_SECRET: $CLOUDINARY_API_SECRET"
-          echo "CLOUDINARY_PRESET: $CLOUDINARY_PRESET"
-          npm run test
+          echo "Exit Debugging Cloudinary Secrets..."
+      - name: Run tests
+        run: npm run test
