--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,4 +35,8 @@ jobs:
           echo "CLOUDINARY_API_SECRET: $CLOUDINARY_API_SECRET"
           echo "Exit Debugging Cloudinary Secrets..."
       - name: Run tests
+        env:
+          CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME}}
+          CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY}}
+          CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET}}
         run: npm run test
