--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,11 +28,13 @@ jobs:
           CLOUDINARY_CLOUD_NAME: ${{ secrets.CLOUDINARY_CLOUD_NAME}}
           CLOUDINARY_API_KEY: ${{ secrets.CLOUDINARY_API_KEY}}
           CLOUDINARY_API_SECRET: ${{ secrets.CLOUDINARY_API_SECRET}}
+          JWT_SECRET: ${{ secrets.JWT_SECRET }}
         run: |
           echo "Debugging Cloudinary Secrets..."
           echo "CLOUDINARY_CLOUD_NAME: $CLOUDINARY_CLOUD_NAME"
           echo "CLOUDINARY_API_KEY: $CLOUDINARY_API_KEY"
           echo "CLOUDINARY_API_SECRET: $CLOUDINARY_API_SECRET"
+          echo "JWT_SECRET: $JWT_SECRET"
           echo "Exit Debugging Cloudinary Secrets..."
       - name: Run tests
         env:
