--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
 PORT=8080
+EDNITHA_CRAFT_URL_DEV=http://localhost:5173
 NODE_ENV=''
 DB_CONNECTION_STRING=mongodb+srv://user:password@db.84lsprh.mongodb.net/db_name
 DB_CONNECTION_STRING_TEST=mongodb+srv://user:password@db.84lsprh.mongodb.net/testdb_name
@@ -7,4 +8,7 @@ CLOUDINARY_CLOUD_NAME=my-projects-cloudinary
 CLOUDINARY_API_KEY=56428973641895
 CLOUDINARY_API_SECRET=Lk5lWiINgdlryPPTHeUmOspaOPDKp9
 CLOUDINARY_PRESET=your-preset
+SENDGRID_API_KEY=SG.WH49GL8GB7EKLT29477HGR.CfgTlThma-GL488DMfjt93LamcE374TglDM4Rtmfl67Y
+SENGRID_TEMPLATE_EMAIL_VERIFICATION=d-lkfn72w92ng298nnnwlw939nf
+
 
