--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.7.0",
     "@types/cors": "^2.8.15",
     "@types/express": "^4.17.20",
     "@types/morgan": "^1.9.7",
